--- a/src/app/add-participation/add-participation.component.html
+++ b/src/app/add-participation/add-participation.component.html
@@ -5,6 +5,10 @@
         <label for="userId">User ID:</label>
         <input type="number" id="userId" formControlName="userId" required>
       </div>
+      <div>
+        <label for="eventId">Event ID:</label>
+        <input type="number" id="eventId" formControlName="eventId" required>
+      </div>
 <div class="form-group">
     <label>ShowTime :</label>
     <input type="datetime-local" formControlName="showtime" class="form-control">
