--- a/src/app/component/supplier/list-supplier/list-supplier.component.html
+++ b/src/app/component/supplier/list-supplier/list-supplier.component.html
@@ -41,4 +41,8 @@
       <br><br> <button (click)="downloadExcel()">Download Excel</button></div>
   </div>
   
+  
+  <div class="text-center mt-3">
+    <button class="action-btn back-btn" routerLink="/admin/logistic">Back</button>
+  </div>
 </div>
