--- a/src/app/component/equipment/list-equipment/list-equipment.component.css
+++ b/src/app/component/equipment/list-equipment/list-equipment.component.css
@@ -1,51 +1,79 @@
 .table {
-    border-collapse: collapse;
-    width: 100%;
-    
-  }
-  
-  th, td {
-    border: 1px solid #ddd;
-    padding: 8px;
-    text-align: left;
-  }
-  
-  th {
-    background-color: #f2f2f2;
-  }
-
-  .table-container {
-    margin-left: 30px; /* Ajustez la valeur selon vos besoins */
-  }
-  .search-form {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  border-collapse: collapse;
+  width: 100%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+  margin-left: auto; /* Align the table to the right */
 }
+
+th, td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: left;
+}
+
+th {
+  background-color: #f2f2f2;
+}
+
+.search-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .sort-button {
   cursor: pointer;
-  
   padding: 10px;
   border-radius: 5px;
 }
 
 .sort-button:hover {
-  background-color: grey;
+  background-color: #ddd;
 }
+
 .btn {
-  font-size: 20px; /* Rend le texte du bouton plus grand */
-  width: 40px; /* Rend le bouton plus large */
-  height: 40px; /* Rend le bouton plus haut */
+  font-size: 20px;
+  width: 40px;
+  height: 40px;
+  border: none;
+  color: white;
 }
-.btn-success {
-  background-color: green; /* Rend le bouton d'augmentation vert */
+
+.increase-btn {
+  background-color: #4CAF50;
 }
-.btn-danger {
-  background-color: red; /* Rend le bouton de diminution rouge */
+
+.decrease-btn {
+  background-color: #f44336;
 }
-.centered-table {
-  border-collapse: collapse;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+
+.action-btn {
+  padding: 10px 24px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  color: white;
+}
+
+.add-btn {
+  background-color: #4CAF50;
+}
+
+.delete-btn {
+  background-color: #f44336;
+}
+
+.update-btn {
+  background-color: #008CBA;
+}
+
+.stats-btn {
+  background-color: #e7e7e7;
+  color: black;
+}
+
+.download-btn {
+  background-color: #f44336;
 }
 
 .centered-table th,
@@ -57,4 +85,19 @@
 
 .centered-table tr:nth-child(even) {
   background-color: #f2f2f2;
+}
+
+.centered-table tr.low {
+  background-color: #f6dcd6; /* A more artistic shade of red */
+}
+
+.centered-table tr.medium {
+  background-color: #fff3cd; /* A more artistic shade of yellow */
+}
+.table-container {
+  margin-left: 100px; /* Align the table to the right */
+}
+
+.action-btn.back-btn {
+  background-color: #555; /* Or any color you prefer */
 }
