--- a/src/app/component/staff/list-staff/list-staff.component.html
+++ b/src/app/component/staff/list-staff/list-staff.component.html
@@ -57,4 +57,8 @@
 
 
   </div>
+  
+  <div class="text-center mt-3">
+    <button class="action-btn back-btn" routerLink="/admin/logistic">Back</button>
+  </div>
 </div>
