--- a/src/app/BackOffice/navbarback/navbarback.component.html
+++ b/src/app/BackOffice/navbarback/navbarback.component.html
@@ -2,6 +2,9 @@
   <div class="body-wrapper">
     <!--  Header Start -->
     <header class="app-header">
+
+
+
       <nav class="navbar navbar-expand-lg navbar-light">
         <ul class="navbar-nav">
           <li class="nav-item d-block d-xl-none">
@@ -15,6 +18,7 @@
             </a>
           </li>
           <li class="nav-item">
+
             <a class="nav-link nav-icon-hover" href="javascript:void(0)">
               <i class="ti ti-bell-ringing"></i>
               <div class="notification bg-primary rounded-circle"></div>
@@ -27,7 +31,11 @@
             <li class="nav-item dropdown">
               <a class="nav-link nav-icon-hover" href="javascript:void(0)" id="drop2" data-bs-toggle="dropdown"
                 aria-expanded="false">
+
                 <img src="../assets/images/profile/user-1.jpg" alt="" width="35" height="35" class="rounded-circle">
+
+                <img src="../profile/logo.png"  >
+
               </a>
               <div class="dropdown-menu dropdown-menu-end dropdown-menu-animate-up" aria-labelledby="drop2">
                 <div class="message-body">
