--- a/src/app/BackOffice/sidebarback/sidebarback.component.html
+++ b/src/app/BackOffice/sidebarback/sidebarback.component.html
@@ -7,7 +7,9 @@
       <div>
         <div class="brand-logo d-flex align-items-center justify-content-between">
           <a href="./index.html" class="text-nowrap logo-img">
-            <img src="../assets/images/logos/dark-logo.svg" width="180" alt="" />
+
+            <img src="../assets/images/profile/logo.png width=" />
+
           </a>
           <div class="close-btn d-xl-none d-block sidebartoggler cursor-pointer" id="sidebarCollapse">
             <i class="ti ti-x fs-8"></i>
@@ -28,10 +30,12 @@
                 <span class="hide-menu">Dashboard</span>
               </a>
             </li>
+
             <li class="nav-small-cap">
               <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
               <span class="hide-menu">UI COMPONENTS</span>
             </li>
+
             <li class="sidebar-item">
               <a class="sidebar-link" href="./ui-buttons.html" aria-expanded="false">
                 <span>
@@ -42,11 +46,37 @@
               </a>
             </li>
             <li class="sidebar-item">
+            
+            <li class="sidebar-item">
+              <a class="sidebar-link" [routerLink]="['/list']" aria-expanded="false">
+                <span>
+                  <i class="ti ti-article"></i>
+                </span>
+                <span class="hide-menu">Participations</span>
+              </a>
+            </li>
+            <li class="sidebar-item">
+              <a class="sidebar-link" [routerLink]="['/admin/votes']" aria-expanded="false">
+                <span>
+                  <i class="ti ti-article"></i>
+                </span>
+                <span class="hide-menu">Votes</span>
+              </a>
+            </li>
+            
+          
+
+            <li class="sidebar-item">
+
               <a class="sidebar-link" href="./ui-alerts.html" aria-expanded="false">
                 <span>
                   <i class="ti ti-alert-circle"></i>
                 </span>
+
                 <a  href="banuser" class="btn custom-btn d-lg-block d-none">Ban User</a>
+
+                
+
               </a>
             </li>
             <li class="sidebar-item">
@@ -82,8 +112,10 @@
                 <span>
                   <i class="ti ti-login"></i>
                 </span>
+
                 <a *ngIf="!isLoggedIn" href="login" class="btn custom-btn d-lg-block d-none">Login</a>
                
+
               </a>
             </li>
             <li class="sidebar-item">
@@ -95,6 +127,7 @@
                 <a *ngIf="!isLoggedIn" href="register" class="btn custom-btn d-lg-block d-none">Sign up</a>
               </a>
               <button *ngIf="isLoggedIn" class="btn custom-btn d-lg-block d-none" (click)="logout()">Logout</button>
+
             </li>
             <li class="nav-small-cap">
               <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
@@ -117,6 +150,7 @@
               </a>
             </li>
           </ul>
+
           <div class="unlimited-access hide-menu bg-light-primary position-relative mb-7 mt-5 rounded">
             <div class="d-flex">
               <div class="unlimited-access-title me-3">
@@ -128,6 +162,7 @@
               </div>
             </div>
           </div>
+
         </nav>
         <!-- End Sidebar navigation -->
       </div>
