--- a/src/app/FrontOffice/navbarcomponentfront/navbarcomponentfront.component.html
+++ b/src/app/FrontOffice/navbarcomponentfront/navbarcomponentfront.component.html
@@ -1,6 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: black;">
     <div class="container">
+
         <a class="navbar-brand">
+
             Festava Live
         </a>
 
@@ -14,7 +16,9 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav align-items-lg-center ms-auto me-lg-5">
                 <li class="nav-item">
+
                     <a class="nav-link click-scroll" href="front">Home</a>
+
                 </li>
 
                 <li class="nav-item">
@@ -24,6 +28,16 @@
                 <!-- Display the "FeedBack And Result" link only if the user is logged in and has the role of evaluator -->
                 <li class="nav-item" *ngIf="isLoggedIn && isEvaluator">
                     <a class="nav-link click-scroll" href="#section_3" routerLink="/affichage">FeedBack And Result</a>
+                </li>
+
+
+                <a class="nav-item" [routerLink]="['/galaxydance/vote']" aria-expanded="false">
+                    
+                    <span class="hide-menu">Vote Now</span>
+                  </a>
+                <li class="nav-item">
+                    <a class="nav-link" href="#section_participant_dashboard">Participation
+                    </a>
                 </li>
 
                 <li class="nav-item">
@@ -37,6 +51,7 @@
                 <li class="nav-item">
                     <a class="nav-link click-scroll" href="#section_6">Contact</a>
                 </li>
+
 
                 <!-- Display only if the user is an admin -->
                 <li class="nav-item" *ngIf="isAdmin">
@@ -53,3 +68,4 @@
         </div>
     </div>
 </nav>
+
