--- a/src/app/FrontOffice/navbarcomponentfront/navbarcomponentfront.component.html
+++ b/src/app/FrontOffice/navbarcomponentfront/navbarcomponentfront.component.html
@@ -6,7 +6,7 @@
             Festava Live
         </a>
 
-        <a href="ticket.html" class="btn custom-btn d-lg-none ms-auto me-4">Buy Ticket</a>
+       
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,16 +26,16 @@
                 </li>
 
                 <!-- Display the "FeedBack And Result" link only if the user is logged in and has the role of evaluator -->
-                <li class="nav-item" *ngIf="isLoggedIn && isEvaluator">
+                <li class="nav-item" *ngIf="isLoggedIn">
                     <a class="nav-link click-scroll" href="#section_3" routerLink="/affichage">FeedBack And Result</a>
                 </li>
 
 
-                <a class="nav-item" [routerLink]="['/galaxydance/vote']" aria-expanded="false">
+                <a class="nav-item" *ngIf="isLoggedIn" [routerLink]="['/galaxydance/vote']" aria-expanded="false">
                     
                     <span class="hide-menu">Vote Now</span>
                   </a>
-                <li class="nav-item">
+                <li class="nav-item" *ngIf="isLoggedIn">
                     <a class="nav-link" href="#section_participant_dashboard">Participation
                     </a>
                 </li>
