--- a/src/app/BackOffice/alltemplateback/alltemplateback.component.html
+++ b/src/app/BackOffice/alltemplateback/alltemplateback.component.html
@@ -6,6 +6,7 @@
 <div class="layout-container">
 
 
+
   <div class="layout-wrapper layout-content-navbar">
     <div class="layout-container clearfix">
         <div class="sidebar">
@@ -16,6 +17,7 @@
         <div class="backoffice">
             <!-- Content for backoffice layout goes here -->
             <app-headerfront></app-headerfront>
+            <app-admin-start-page-aziz></app-admin-start-page-aziz>
             <router-outlet></router-outlet>
   
             <app-backoffice-layout></app-backoffice-layout>
@@ -40,7 +42,6 @@
    
 </div>
 </div>
-
 
 
 
