--- a/src/app/FrontOffice/alltemplatefront/alltemplatefront.component.html
+++ b/src/app/FrontOffice/alltemplatefront/alltemplatefront.component.html
@@ -21,11 +21,10 @@
 
          <app-headerfront></app-headerfront>      
          <app-navbarcomponentfront></app-navbarcomponentfront> 
+         <app-front-search-bar></app-front-search-bar>        
          <app-homecomponentfront></app-homecomponentfront>
-
-           
-              <app-castvote></app-castvote>
-
+         <app-index-dance-categories></app-index-dance-categories>    
+         <app-index-event></app-index-event>
          <app-footerfront></app-footerfront>
          
       
