--- a/src/app/FrontOffice/alltemplatefront/alltemplatefront.component.html
+++ b/src/app/FrontOffice/alltemplatefront/alltemplatefront.component.html
@@ -17,14 +17,14 @@
 
 
 
-
-
          <app-headerfront></app-headerfront>      
          <app-navbarcomponentfront></app-navbarcomponentfront> 
-         <app-front-search-bar></app-front-search-bar>        
+         <app-front-search-bar></app-front-search-bar>      
+         <router-outlet></router-outlet>  
          <app-homecomponentfront></app-homecomponentfront>
          <app-index-dance-categories></app-index-dance-categories>    
          <app-index-event></app-index-event>
+
          <app-footerfront></app-footerfront>
          
       
