--- a/src/app/view-shedule/view-shedule.component.html
+++ b/src/app/view-shedule/view-shedule.component.html
@@ -17,6 +17,8 @@
   
   <app-headerfront></app-headerfront>      
   <app-navbarcomponentfront></app-navbarcomponentfront> 
+  <app-venue-index-front></app-venue-index-front>
+  
 
   <section class="schedule-section section-padding" id="section_4">
     
@@ -52,6 +54,9 @@
       </div>
     </div>
   </section>
+
+
+
 
   <app-footerfront></app-footerfront>
 
