--- a/src/app/Logistic/logistic/logistic.component.html
+++ b/src/app/Logistic/logistic/logistic.component.html
@@ -28,6 +28,36 @@
           </div>
         </div>
       </div>
+
+
+
+
+      <div class="col-md-4">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Transport</h5>
+            <p class="card-text">{{ transportCount }}</p>
+            <a routerLink="/admin/listtransport" class="btn btn-primary">Manage Transport</a>
+          </div>
+        </div>
+      </div>
+
+
+
+
+
+
+      <div class="col-md-4">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Vehicle</h5>
+            <p class="card-text">{{ vehiculeCount }}</p>
+            <a routerLink="/admin/listvehicule" class="btn btn-primary">Manage Vehicle</a>
+          </div>
+        </div>
+      </div>
+
+
     </div>
   </div>
   
