--- a/src/app/component/equipment/list-equipment/list-equipment.component.html
+++ b/src/app/component/equipment/list-equipment/list-equipment.component.html
@@ -35,6 +35,15 @@
           <td>
             <button class="action-btn delete-btn" (click)="removeEquipment(equipment)">Delete</button>
             <button class="action-btn update-btn" routerLink="/admin/updateEquipment/{{equipment.id_equipment}}">Update</button>
+
+            <label for="logisticSelect">Logistic :</label>
+            <select id="logisticSelect" [(ngModel)]="equipment.id_logistic">
+              <option *ngFor="let logistic of logistics" [value]="logistic.id_logistic">{{logistic.id_logistic}}</option>
+            </select>
+            
+            
+              <button (click)="assignToLogistic(equipment, equipment.id_logistic)">Affect</button>
+            
           </td>
           <td> <!-- New column for status messages -->
             <span *ngIf="equipment.quantity === 0">Out of Stock</span>
