--- a/src/app/component/transport/list-transport/list-transport.component.html
+++ b/src/app/component/transport/list-transport/list-transport.component.html
@@ -1,26 +1,45 @@
-<table>
-  <thead>
-    <tr>
-      <th>Route</th>
-      <th>Description</th>
-      <th>Start Location</th>
-      <th>End Location</th>
-      <th>Logistic</th>
-      <th>Vehicules</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let transport of transports">
-      <td>{{ transport.route }}</td>
-      <td>{{ transport.description }}</td>
-      <td>{{ transport.startLocation }}</td>
-      <td>{{ transport.endLocation }}</td>
-      <td>{{ transport.logistic.id_logistic }}</td>
-      <td>
-        <ul>
-          <li *ngFor="let vehicule of transport.id_transport">{{ vehicule }}</li>
-        </ul>
-      </td>
-    </tr>
-  </tbody>
-</table>
+<div class="container mt-5">
+  <h2 class="text-center">List of Transports</h2>
+
+  <div class="table-container">
+    <table class="table centered-table">
+      <thead>
+        <tr>
+          <th>Route</th>
+          <th>Description</th>
+          <th>Start Location longitude</th>
+          <th>Start Location latitude</th>
+          <th>End Location longitude</th>
+          <th>End Location latitude</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let transport of transports">
+          <td>{{ transport.route }}</td>
+          <td>{{ transport.description }}</td>
+          <td>{{ transport.startLocation_longitude }}</td>
+          <td>{{ transport.startLocation_latitude }}</td>
+
+          <td>{{ transport.endLocation_longitude }}</td>
+          <td>{{ transport.endLocation_latitude }}</td>
+          <td>
+            <button class="action-btn delete-btn" (click)="removeTransport(transport)">Delete</button>
+            <button routerLink="/admin/updatetransport/{{transport.id_transport}}">Update</button>
+          </td>
+        </tr>
+        <tr *ngIf="!transports || transports.length === 0">
+          <td colspan="5" class="text-center">No transports found</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <div class="text-center mt-3">
+    <button class="action-btn add-btn" routerLink="/admin/addtransport">Add New Transport</button>
+  </div>
+
+  <div class="text-center mt-3">
+    <button class="action-btn back-btn" routerLink="/admin/logistic">Back</button>
+  </div>
+</div>
