--- a/src/app/view-shedule/view-shedule.component.html
+++ b/src/app/view-shedule/view-shedule.component.html
@@ -11,38 +11,51 @@
   <link rel="stylesheet" href="/assets/FrontOffice/assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="/assets/FrontOffice/assets/css/bootstrap-icons.css">
   <link rel="stylesheet" href="/assets/FrontOffice/assets/css/templatemo-festava-live.css">
+  <link rel="stylesheet" href="/assets/leaflet/dist/leaflet.css">
 </head>
 <body>
 
   
   <app-headerfront></app-headerfront>      
   <app-navbarcomponentfront></app-navbarcomponentfront> 
-  <app-venue-index-front></app-venue-index-front>
+
+  
+  
+
+
   
 
   <section class="schedule-section section-padding" id="section_4">
-    
+    <div class="text-center"> <!-- Ajoutez cette classe pour centrer le contenu -->
+      <h2 class="map-title bg-black textt text-white">Event Details</h2> <!-- Titre centré -->
+    </div>
+    <app-venue-index-front></app-venue-index-front>
+    <app-map-display-front-aziz></app-map-display-front-aziz>
+
     <div class="container">
+      
       <div class="row">
+    
         <div class="col-12 text-center">
           <div *ngIf="schedule.length > 0" class="d-flex justify-content-center">
             <div class="table-container">
-              <table class="table table-striped table-dark"> <!-- Ajout de la classe table-dark pour le fond noir -->
+              <table class="table table-striped table-dark table-responsive w-100"> <!-- Ajout de la classe w-100 -->
                 <thead>
                   <tr>
-                    <th>PANNING ACTIVITIES FOR THIS EVENT</th>
+                    
+                    <th>EVENT PLANNING</th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr *ngFor="let activity of schedule">
                     <td>{{ activity }}</td>
+
                   </tr>
                 </tbody>
               </table>
               <button class="btn btn-dark"><a href="http://localhost:4200/reservation" class="text-white">Get your ticket</a></button>
               -- 
               <button class="btn btn-dark"><a href="http://localhost:4200/welcome/all" class="text-white">Back</a></button>
-
             </div>
           </div>
           <div *ngIf="schedule.length === 0" class="d-flex justify-content-center">
@@ -54,6 +67,9 @@
       </div>
     </div>
   </section>
+  
+  
+  
 
 
 
