--- a/src/app/view-shedule/view-shedule.component.html
+++ b/src/app/view-shedule/view-shedule.component.html
@@ -37,9 +37,15 @@
       <div class="row">
     
         <div class="col-12 text-center">
+          <div>
+            <!-- Autres éléments du template -->
+          
+            <p *ngIf="isEventFull">{{ isEventFull }}</p>
+          </div>
           <div *ngIf="schedule.length > 0" class="d-flex justify-content-center">
             <div class="table-container">
               <table class="table table-striped table-dark table-responsive w-100"> <!-- Ajout de la classe w-100 -->
+                
                 <thead>
                   <tr>
                     
