--- a/src/app/FrontOffice/navbarcomponentfront/navbarcomponentfront.component.html
+++ b/src/app/FrontOffice/navbarcomponentfront/navbarcomponentfront.component.html
@@ -32,9 +32,10 @@
 
 
                 <!-- Display the "FeedBack And Result" link only if the user is logged in and has the role of evaluator -->
-                <li class="nav-item" *ngIf="isLoggedIn">
+                <li class="nav-item" *ngIf="isLoggedIn && isDancer">
                     <a class="nav-link click-scroll" href="#section_3" routerLink="/affichage">FeedBack And Result</a>
-                </li>
+                  </li>
+                  
 
 
                 <a class="nav-item" *ngIf="isLoggedIn" [routerLink]="['/galaxydance/vote']" aria-expanded="false">
